libcontextprovider/intset.vapi

/* intset.vapi generated by vapigen, do not modify. */

[CCode (cprefix = "ContextKit", lower_case_cprefix = "context_kit_")]
namespace ContextKit {
	[Compact]
	[CCode (copy_function = "context_kit_intset_copy", free_function = "context_kit_intset_destroy", cheader_filename = "intset.h")]
	public class IntSet {
		[CCode (cname = "context_kit_intset_new", has_construct_function = false)]
		public IntSet ();
		[CCode (cname = "context_kit_intset_sized_new")]
		public IntSet.sized (uint size);
		[CCode (cname = "context_kit_intset_from_array")]
		public IntSet.from_array (GLib.Array array);
		[CCode (cname = "context_kit_intset_intersection")]
		public IntSet.intersection (ContextKit.IntSet left, ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_symmetric_difference")]
		public IntSet.symmetric_difference (ContextKit.IntSet left, ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_difference")]
		public IntSet.difference (ContextKit.IntSet left, ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_union")]
		public IntSet.union (ContextKit.IntSet left, ContextKit.IntSet right);

		[CCode (cname = "context_kit_intset_add")]
		public void add (uint element);
		[CCode (cname = "context_kit_intset_clear")]
		public void clear ();
		[CCode (cname = "context_kit_intset_dump")]
		public weak string dump ();
		[CCode (cname = "context_kit_intset_foreach")]
		public void @foreach (ContextKit.IntFunc func, void* userdata);
		[CCode (cname = "context_kit_intset_is_equal")]
		public bool is_equal (ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_is_member")]
		public bool is_member (uint element);
		[CCode (cname = "context_kit_intset_is_subset")]
		public bool is_subset (ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_is_disjoint")]
		public bool is_disjoint (ContextKit.IntSet right);
		[CCode (cname = "context_kit_intset_remove")]
		public bool remove (uint element);
		[CCode (cname = "context_kit_intset_size")]
		public uint size ();
		[CCode (cname = "context_kit_intset_to_array")]
		public weak GLib.Array to_array ();
	}
	[CCode (cheader_filename = "intset.h", is_value_type="1")]
	public struct IntSetIter {
		[CCode (cname = "context_kit_intset_iter_init")]
		public IntSetIter (IntSet? set);
		public weak ContextKit.IntSet? set;
		public uint element;
		[CCode (cname = "context_kit_intset_iter_next")]
		public bool next ();
	}
	[CCode (cheader_filename = "intset.h")]
	public static delegate void IntFunc (uint i, void* userdata);
}
